<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/note_item_background">

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/screen_padding"
        android:layout_marginTop="@dimen/vertical_margin"
        android:layout_marginBottom="@dimen/vertical_margin"
        android:textSize="@dimen/low_text_size"
        android:maxLines="2"
        android:text="@string/header"
        app:layout_constraintBottom_toTopOf="@+id/item1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/itemCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/screen_padding"
        android:layout_marginTop="@dimen/vertical_margin"
        android:layout_marginBottom="@dimen/vertical_margin"
        android:textSize="@dimen/low_text_size"
        android:text="@string/textview"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/more" />

    <TextView
        android:id="@+id/more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/screen_padding"
        android:layout_marginTop="@dimen/vertical_margin"
        android:textSize="@dimen/low_text_size"
        android:text="@string/more"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item3" />

    <CheckBox
        android:id="@+id/item1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_margin"
        android:buttonTint="@color/gray"
        android:clickable="false"
        android:maxLines="1"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:text="@string/checkbox"
        android:textSize="@dimen/low_text_size"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="@+id/header"
        app:layout_constraintTop_toBottomOf="@+id/header" />

    <CheckBox
        android:id="@+id/item2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_margin"
        android:buttonTint="@color/gray"
        android:clickable="false"
        android:maxLines="1"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:text="@string/checkbox"
        android:textSize="@dimen/low_text_size"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="@+id/item1"
        app:layout_constraintTop_toBottomOf="@+id/item1" />

    <CheckBox
        android:id="@+id/item3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_margin"
        android:buttonTint="@color/gray"
        android:clickable="false"
        android:maxLines="1"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:text="@string/checkbox"
        android:textSize="@dimen/low_text_size"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="@+id/item2"
        app:layout_constraintTop_toBottomOf="@+id/item2" />

</androidx.constraintlayout.widget.ConstraintLayout>